# cookiecutter-pypackage-pdm

./: CONTRIBUTING.rst  README.rst  cookiecutter.json  tox.ini
docs/: prompts.rst  tutorial.rst
tests/: test_bake_project.py
{{cookiecutter.github_slug}}/: .gitignore  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  tox.ini
{{cookiecutter.github_slug}}/docs/: conf.py  index.rst  installation.rst
