[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" },
]
requires-python = ">=3.9"
readme = "README.rst"
keywords = []

{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
{%- if cookiecutter.open_source_license in license_classifiers %}
        "{{ license_classifiers[cookiecutter.open_source_license] }}",
{%- endif %}
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0.0",
]

{%- if cookiecutter.open_source_license in license_classifiers %}
[project.license]
text = "{{ cookiecutter.open_source_license }}"
{%- endif %}

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_slug }}"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
]
dev = [
    "pip>=19.2.3",
    "tox-pdm>=0.7.0",
    "pdm-bump>=0.7.0",
    "wheel>=0.33.6",
    "watchdog>=0.9.0",
    "flake8>=3.7.8",
    "coverage>=4.5.4",
    "twine>=1.14.0",
    "black>=21.7b0",
    "pre-commit>=3.4.0",
]
doc = [
    "sphinx",
    "myst-nb",
    "sphinx-rtd-theme",
]

[tool.black]
line-length = 99
target-version = [
    "py39",
    "py310",
    "py311",
    "py312",
]
include = "\\.pyi?$"
exclude = "/(\n  \\.toml\n  |\\.sh\n  |\\.git\n  |\\.ini\n  |Dockerfile\n  |Jenkinfile\n)/\n"

[tool.pdm.scripts]
## install with dev deps
install-dev = {composite = ["pdm sync --dev", "pre-commit install"]}

## isntall with prod deps
install-prod = {composite = ["pdm sync --prod", "pre-commit install"]}

## remove build artifacts
clean-build = {composite = [
        "rm -fr build/",
        "rm -fr dist/",
        "rm -fr .eggs/",
        "find . -name '*.egg-info' -exec rm -fr {} +",
        "find . -name '*.egg' -exec rm -f {} +",
]}

## remove Python file artifacts
clean-pyc = {composite = [
	"find . -name '*.pyc' -exec rm -f {} +",
	"find . -name '*.pyo' -exec rm -f {} +",
	"find . -name '*~' -exec rm -f {} +",
	"find . -name '__pycache__' -exec rm -fr {} +",
]}

## remove test and coverage artifacts
clean-test = {composite = [
	"rm -fr .tox/",
	"rm -f .coverage",
	"rm -fr htmlcov/",
	"rm -fr .pytest_cache",
]}

## check style with flake8
lint-flake8 = "flake8 {{ cookiecutter.project_slug }} tests"

## check style with black
lint-black = "black --check {{ cookiecutter.project_slug }} tests"

## check style
lint = {composite = ["lint-flake8", "lint/black"]}

## remove all build, test, coverage and Python artifacts
clean = {composite = ["clean-build", "clean-pyc", "clean-test"]}

## run tests quickly with the default Python
test = "pytest"

## run tests on every Python version with tox
test-all = "tox"

## check code coverage quickly with the default Python
coverage-report = {composite = [
	"coverage run --source {{ cookiecutter.project_slug }} -m pytest",
	"coverage report -m",
	"coverage html",
	"open htmlcov/index.html",
]}

## package and upload a release
release = {composite = [
    "dist",
    "pdm publish"
]}

## builds source and wheel package
dist = {composite = [
    "clean",
    "pdm build"
]}
